--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,25 @@
     box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
   }
   
+  @keyframes heartbeat {
+    0% {
+      transform: scale(1);
+    }
+    25% {
+      transform: scale(1.05);
+    }
+    50% {
+      transform: scale(1);
+    }
+    75% {
+      transform: scale(1.05);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  
+  .heartbeat {
+    animation: heartbeat 2s ease-in-out infinite;
+  }
+  
